--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "sequelize": "^3.23.2",
+    "sqlite": "^2.0.2",
     "sqlite3": "^3.1.4",
     "underscore": "^1.8.3"
   }
