--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
+    "pg": "^4.5.5",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^3.23.2",
     "sqlite": "^2.0.2",
     "sqlite3": "^3.1.4",
